<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_fafafa"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c_ffffff"
        android:orientation="vertical">

        <com.orientdata.lookforcustomers.widget.EditTextView
            android:id="@+id/enterpriseName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:hintText="@string/enterprise_name_hint"
            app:leftText="@string/enterprise_name"
            app:leftTextColor="@color/text_gray" />

        <com.orientdata.lookforcustomers.widget.EditTextView
            android:id="@+id/businessNum"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:hintText="@string/business_license_num_hint"
            app:leftText="@string/business_license_num"
            app:leftTextColor="@color/text_gray" />

        <com.orientdata.lookforcustomers.widget.EditTextView
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:hintText="@string/contact_name_hint"
            app:leftText="@string/contact_name"
            app:leftTextColor="@color/text_gray" />

        <com.orientdata.lookforcustomers.widget.EditTextViewNumBer
            android:id="@+id/contactPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:hintText="@string/contact_phone_hint"
            app:leftText="@string/contact_phone"
            app:leftTextColor="@color/text_gray" />

        <com.orientdata.lookforcustomers.widget.EditTextViewIdCode
            android:id="@+id/contactIdNum"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:hintText="@string/contact_id_num_hint"
            app:leftText="@string/contact_id_num"
            app:leftTextColor="@color/text_gray" />


        <!--<LinearLayout-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="50dp">-->
            <!--<TextView-->
                <!--android:text="联系人电话"-->
                <!--android:textColor="@color/text_gray"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content" />-->
            <!--<EditText-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="50dp" />-->
        <!--</LinearLayout>-->



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/c_ffffff"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp">

            <TextView
                android:textStyle="bold"
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/enterprise_locate"
                android:textColor="#7F7F7F"
                android:textSize="16sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="130dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/linearProvince"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingRight="20dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tvChooseProvince"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_province"
                        android:textColor="@color/text_gray"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/ivChooseProvince"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_toRightOf="@+id/tvChooseProvince"
                        app:srcCompat="@mipmap/choose" />
                </LinearLayout>
                <View
                    android:id="@+id/view"
                    android:layout_width="2px"
                    android:layout_height="15dp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_toRightOf="@+id/ivChooseProvince"
                    android:background="@color/c_D8D8D8" />
                <LinearLayout
                    android:id="@+id/linearCity"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tvChooseCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_city"
                        android:textColor="@color/text_gray"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/ivChooseCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_toRightOf="@+id/tvChooseCity"
                        app:srcCompat="@mipmap/choose" />
                </LinearLayout>

            </LinearLayout>






        </RelativeLayout>

        <com.orientdata.lookforcustomers.widget.EditTextView
            app:leftTextColor="@color/text_gray"
            android:id="@+id/enterpriseAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:hintText="@string/enterprise_address_hint"
            app:leftText="@string/enterprise_address" />
    </LinearLayout>

    <Button
        android:id="@+id/btNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_tv_round_gradient"
        android:text="@string/next"
        android:textColor="@color/c_ffffff" />

    <View
        android:layout_width="match_parent"
        android:layout_height="150dp" />

    <TextView
        android:id="@+id/province_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/city_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/province_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/city_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />
</LinearLayout>
